fix: optional关键字在java服务端的实现问题