@@ -10,6 +10,7 @@ import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.json.JacksonJsonParser;
 import org.springframework.http.HttpStatus;
+import org.springframework.lang.Nullable;
 
 import java.io.File;
 import java.util.List;
@@ -306,7 +307,7 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
             TS_INTYPE_MAP.put(Intypes.INT, "number");
             TS_INTYPE_MAP.put(Intypes.LONG, "bigint");
             TS_INTYPE_MAP.put(Intypes.DOUBLE, "number");
-            TS_INTYPE_MAP.put(Intypes.BINARY, "string");
+            TS_INTYPE_MAP.put(Intypes.BINARY, "Blob");
             TS_INTYPE_MAP.put(Intypes.STRING, "string");
 
             SQL_INTYPE_MAP.put(Intypes.BOOLEAN, "bool");
@@ -322,6 +323,8 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
             SQL_INTYPE_MAP.put(Intypes.STRING, "varchar(200)");
         }
 
+        private Modifier modifier = Modifier.REQUIRED;
+        private String token;
         private String javaSimpleName;
         private String tsSimpleName;
         private String sqlSimpleName;
@@ -346,6 +349,10 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
             if (this.isMap) {
                 return javaSimpleName + "<" + t1.javaString() + ", " + t2.javaString() + ">";
             } else if (this.isCollection) {
+                // 对于二进制集合，我们实际上期望它的类型是byte[]，而不是List<Byte>
+                if (Intypes.BYTE.equals(this.t1.getToken())) {
+                    return "byte[]";
+                }
                 return javaSimpleName + "<" + t1.javaString() + ">";
             } else {
                 return javaSimpleName;
@@ -595,6 +602,7 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
                             result.setAnnotationName("PostMapping");
                         } else if (StrUtil.equalsIgnoreCase(annoName, "getUri")) {
                             result.getImportTypeName().add("org.springframework.web.bind.annotation.GetMapping");
+                            result.getImportTypeName().add("org.springframework.web.bind.annotation.RequestParam");
                             result.setAnnotationName("GetMapping");
                         } else if (StrUtil.equalsIgnoreCase(annoName, "putUri")) {
                             result.getImportTypeName().add("org.springframework.web.bind.annotation.PutMapping");
@@ -747,16 +755,19 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
                 String ruleName = (String) pairMap.get(RULE);
                 switch (ruleName) {
                     case MODIFIER -> modifier = Modifier.getEnumByName((String) pairMap.get(INNER));
-                    case CONTAIN_LIST -> result.setType(parseContainList((Map) pairMap.get(INNER)));
-                    case CONTAIN_MAP -> result.setType(parseContainMap((Map) pairMap.get(INNER)));
-                    case CONTAIN_SET -> result.setType(parseContainSet((Map) pairMap.get(INNER)));
+                    case CONTAIN_LIST -> result.setType(parseContainList((Map) pairMap.get(INNER), modifier));
+                    case CONTAIN_MAP -> result.setType(parseContainMap((Map) pairMap.get(INNER), modifier));
+                    case CONTAIN_SET -> result.setType(parseContainSet((Map) pairMap.get(INNER), modifier));
                     case REF_ENUM -> result.setType(parseRefEnum((Map) pairMap.get(INNER), modifier));
-                    case INTYPE -> result.setType(parseIntype((String) pairMap.get(INNER)));
-                    case UTYPE -> result.setType(parseUtype((Map) pairMap.get(INNER)));
+                    case INTYPE -> result.setType(parseIntype((String) pairMap.get(INNER), modifier));
+                    case UTYPE -> result.setType(parseUtype((Map) pairMap.get(INNER), modifier));
                     case CLASS_FIELD_NAME -> result.setFieldName((String) pairMap.get(INNER));
                 }
             }
             result.setModifier(modifier);
+            if (Modifier.OPTIONAL.equals(modifier)) {
+                result.getImportTypeName().add(Nullable.class.getName());
+            }
             return result;
         }
 
@@ -812,6 +823,7 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
                             result.setReturnType(Objects.requireNonNull(parseType((Map) pairMap.get(INNER), Modifier.REQUIRED)));
                     case VOID -> { // 没有返回值
                         TypeBean returnType = new TypeBean();
+                        returnType.setToken("void");
                         returnType.setJavaSimpleName("void");
                         returnType.setTsSimpleName("null");
                         result.setReturnType(returnType);
@@ -827,7 +839,7 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
                         result.getImportTypeName().add("io.swagger.v3.oas.annotations.Parameter");
                         ParamBean param = parseParam((Map) pairMap.get(INNER));
                         if (Modifier.OPTIONAL.equals(param.getModifier())) {
-                            result.getImportTypeName().add("org.springframework.lang.Nullable");
+                            result.getImportTypeName().add(Nullable.class.getName());
                         }
                         if (doc != null) {
                             param.setDoc(doc);
@@ -859,41 +871,41 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
         public TypeBean parseType(Map typeAst, Modifier modifier) {
             for (Map pairMap : (List<Map>) typeAst.get(PAIRS)) {
                 String ruleName = (String) pairMap.get(RULE);
+                TypeBean result;
+
                 switch (ruleName) {
-                    case INTYPE -> {
-                        return parseIntype((String) pairMap.get(INNER));
-                    }
-                    case CONTAIN_MAP -> {
-                        return parseContainMap((Map) pairMap.get(INNER));
-                    }
-                    case CONTAIN_LIST -> {
-                        return parseContainList((Map) pairMap.get(INNER));
-                    }
-                    case CONTAIN_SET -> {
-                        return parseContainSet((Map) pairMap.get(INNER));
-                    }
-                    case REF_ENUM -> {
-                        return parseRefEnum((Map) pairMap.get(INNER), modifier);
-                    }
-                    case UTYPE -> {
-                        return parseUtype((Map) pairMap.get(INNER));
-                    }
+                    case INTYPE -> result = parseIntype((String) pairMap.get(INNER), modifier);
+                    case CONTAIN_MAP -> result = parseContainMap((Map) pairMap.get(INNER), modifier);
+                    case CONTAIN_LIST -> result = parseContainList((Map) pairMap.get(INNER), modifier);
+                    case CONTAIN_SET -> result = parseContainSet((Map) pairMap.get(INNER), modifier);
+                    case REF_ENUM -> result = parseRefEnum((Map) pairMap.get(INNER), modifier);
+                    case UTYPE -> result = parseUtype((Map) pairMap.get(INNER));
+                    default ->
+                            throw new OnebootGenCodeException("unknown type rule: " + ruleName, HttpStatus.INTERNAL_SERVER_ERROR);
                 }
+                if (Modifier.OPTIONAL.equals(modifier)) {
+                    result.getImportJavaTypeName().add(Nullable.class.getName());
+                }
+                return result;
             }
             return null;
         }
 
-        public TypeBean parseIntype(String intypeString) {
+        public TypeBean parseIntype(String intypeString, Modifier modifier) {
             TypeBean result = new TypeBean();
             result.setIntype(true);
+            result.setToken(intypeString);
+            result.setModifier(modifier);
             result.setJavaSimpleName(TypeBean.JAVA_INTYPE_MAP.get(intypeString));
             result.setTsSimpleName(TypeBean.TS_INTYPE_MAP.get(intypeString));
             result.setSqlSimpleName(TypeBean.SQL_INTYPE_MAP.get(intypeString));
             return result;
         }
 
-        public TypeBean parseContainMap(Map ast) {
+        public TypeBean parseContainMap(Map ast, Modifier modifier) {
             TypeBean result = new TypeBean();
+            result.setToken(CONTAIN_MAP);
+            result.setModifier(modifier);
             result.setJavaSimpleName("Map");
             result.setTsSimpleName("Record");
             result.setSqlSimpleName("jsonb");
@@ -902,18 +914,19 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
             for (Map innerMap : (List<Map>) ast.get(PAIRS)) {
                 String innerRuleName = (String) innerMap.get(RULE);
                 if (CONTAIN_MAP_KEYTYPE.equals(innerRuleName)) {
-                    Map lastMap = (Map) ((List) ((Map) innerMap.get(INNER)).get(PAIRS)).get(0);
+                    Map lastMap = (Map) ((List) ((Map) innerMap.get(INNER)).get(PAIRS)).getFirst();
                     result.setT1(Objects.requireNonNull(parseType((Map) lastMap.get(INNER), Modifier.REQUIRED)));
                 } else if (CONTAIN_MAP_VALUETYPE.equals(innerRuleName)) {
-                    Map lastMap = (Map) ((List) ((Map) innerMap.get(INNER)).get(PAIRS)).get(0);
+                    Map lastMap = (Map) ((List) ((Map) innerMap.get(INNER)).get(PAIRS)).getFirst();
                     result.setT2(Objects.requireNonNull(parseType((Map) lastMap.get(INNER), Modifier.REQUIRED)));
                 }
             }
             return result;
         }
 
-        public TypeBean parseContainList(Map ast) {
+        public TypeBean parseContainList(Map ast, Modifier modifier) {
             TypeBean result = new TypeBean();
+            result.setToken(CONTAIN_LIST);
             result.setJavaSimpleName("List");
             result.setTsSimpleName("");
             result.setSqlSimpleName("jsonb");
@@ -922,15 +935,17 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
             for (Map innerMap : (List<Map>) ast.get(PAIRS)) {
                 String innerRuleName = (String) innerMap.get(RULE);
                 if (CONTAIN_LIST_TYPE.equals(innerRuleName)) {
-                    Map lastMap = (Map) ((List) ((Map) innerMap.get(INNER)).get(PAIRS)).get(0);
+                    Map lastMap = (Map) ((List) ((Map) innerMap.get(INNER)).get(PAIRS)).getFirst();
                     result.setT1(Objects.requireNonNull(parseType((Map) lastMap.get(INNER), Modifier.REQUIRED)));
                 }
             }
             return result;
         }
 
-        public TypeBean parseContainSet(Map ast) {
+        public TypeBean parseContainSet(Map ast, Modifier modifier) {
             TypeBean result = new TypeBean();
+            result.setModifier(modifier);
+            result.setToken(CONTAIN_SET);
             result.setJavaSimpleName("Set");
             result.setTsSimpleName("");
             result.setSqlSimpleName("jsonb");
@@ -939,7 +954,7 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
             for (Map innerMap : (List<Map>) ast.get(PAIRS)) {
                 String innerRuleName = (String) innerMap.get(RULE);
                 if (CONTAIN_SET_TYPE.equals(innerRuleName)) {
-                    Map lastMap = (Map) ((List) ((Map) innerMap.get(INNER)).get(PAIRS)).get(0);
+                    Map lastMap = (Map) ((List) ((Map) innerMap.get(INNER)).get(PAIRS)).getFirst();
                     result.setT1(Objects.requireNonNull(parseType((Map) lastMap.get(INNER), Modifier.REQUIRED)));
                 }
             }
@@ -948,6 +963,7 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
 
         public TypeBean parseRefEnum(Map ast, Modifier modifier) {
             TypeBean result = new TypeBean();
+            result.setToken(REF_ENUM);
             if (Modifier.REQUIRED.equals(modifier)) {
                 result.setJavaSimpleName("int");
             } else {
@@ -966,6 +982,10 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
         }
 
         public TypeBean parseUtype(Map ast) {
+            return parseUtype(ast, Modifier.REQUIRED);
+        }
+
+        public TypeBean parseUtype(Map ast, Modifier modifier) {
             TypeBean result = new TypeBean();
             String importJavaPackage = null;
             String importTsTypeName = "";
@@ -1001,6 +1021,7 @@ public final class ParseRestfulSyntaxTreeUtil implements RestfulTokenDefine {
             }
             result.setTsSimpleName(importTsTypeName);
             result.setSqlSimpleName("jsonb");
+            result.setToken(UTYPE);
             return result;
         }
     }
